--- a/vercel.json
+++ b/vercel.json
@@ -1,49 +1,10 @@
 {
-  "version": 2,
-
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "cleanUrls": true,
   "builds": [
     { "src": "*.html", "use": "@vercel/static" },
-    { "src": "*.css", "use": "@vercel/static" },
-    { "src": "*.js", "use": "@vercel/static" },
+    { "src": "*.css",  "use": "@vercel/static" },
+    { "src": "*.js",   "use": "@vercel/static" },
     { "src": "*.{png,jpg,jpeg,svg,webp}", "use": "@vercel/static" }
-  ],
-
-  "routes": [
-    
-    {
-      "src": "/",
-      "dest": "/index.html"
-    },
-
-    
-    {
-      "src": "/([^/]+)$",
-      "dest": "/$1.html"
-    },
-
-    
-    {
-      "src": "/(.*)\\.html$",
-      "status": 301,
-      "headers": {
-        "Location": "/$1"
-      }
-    },
-
-    
-    {
-      "src": "/404",
-      "dest": "/404.html"
-    },
-
-    
-    {
-      "src": "/(.*)",
-      "headers": {
-        "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
-        "Cache-Control": "public, max-age=31536000, immutable"
-      },
-      "dest": "/$1"
-    }
   ]
 }
